--- a/versions/0.29.0/Cargo.toml
+++ b/versions/0.29.0/Cargo.toml
@@ -25,6 +25,6 @@ anchor-spl = "=0.29.0"
 solana-program = ">= 1.16, < 1.18"
 
 # unpack TickArray
-bincode = "*"
-borsh = "*"
+bincode = "1"
+borsh = ">=0.9, <0.11"
 default-boxed = "0.2.0"
