--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,6 @@ proc-macro-crate = "=1.2.1"
 jobserver = "=0.1.25"
 
 # unpack TickArray
-bincode = "*"
-borsh = "*"
+bincode = "1.3.3"
+borsh = "0.9"
 default-boxed = "0.2.0"
