--- a/versions/0.27.0/Cargo.toml
+++ b/versions/0.27.0/Cargo.toml
@@ -19,17 +19,20 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 
 [dependencies]
-anchor-lang = "=0.26.0"
-anchor-spl = "=0.26.0"
+anchor-lang = "=0.27.0"
+anchor-spl = "=0.27.0"
 
-# MSRV related constraints (solana 1.14 uses Rust 1.62.0-dev)
-# https://github.com/solana-labs/solana/issues/31960#issuecomment-1668682153
-solana-program = ">=1.13.5, <1.15"
+# spl-token-2022 depends on solana-zk-token-sdk and its version must be same to solana-program.
+# spl-token-2022:0.5.0 work with solana-zk-token-sdk:1.14.16 ~ 1.14.17 only...
+# https://github.com/coral-xyz/anchor/issues/2502
+spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
+blake3 = "=1.3.1"
+solana-program = ">=1.14.16, <=1.14.17"
 regex = "=1.7.1"
 proc-macro-crate = "=1.2.1"
 jobserver = "=0.1.25"
 
 # unpack TickArray
-bincode = "1.3.3"
+bincode = "1"
 borsh = "0.9"
 default-boxed = "0.2.0"
