--- a/versions/0.29.0/Cargo.toml
+++ b/versions/0.29.0/Cargo.toml
@@ -22,9 +22,11 @@ cpi = ["no-entrypoint"]
 anchor-lang = "=0.29.0"
 anchor-spl = "=0.29.0"
 
-solana-program = ">= 1.16, < 1.18"
+solana-program = ">=1.16, <1.18"
 
 # unpack TickArray
 bincode = "1"
 borsh = ">=0.9, <0.11"
+# https://github.com/solana-labs/solana/issues/34609
+ahash = "=0.8.6"
 default-boxed = "0.2.0"
