--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,5 @@ solana-program = ">=1.14, <1.17"
 
 # unpack TickArray
 bincode = "1"
-borsh = ">=0.9, <0.11"
+borsh = "0.9"
 default-boxed = "0.2.0"
